feat: restructure project pages and add project form functionality

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -27,6 +27,9 @@
           <li class="nav-item">
             <a class="nav-link" data-route="/dashboard" href="/dashboard/">Dashboard</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" data-route="/projects" href="/projects/">Projects</a>
+          </li>
         </ul>
       </div>
     </div>
