--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link" data-route="/projects" href="/projects/">Projects</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" data-route="/admin" href="/admin/">Admin</a>
+          </li>
         </ul>
       </div>
     </div>
